# pigeon-examples

./: .clangd  .envrc  .gitignore  CLAUDE.md  README.md
.west/: config
docs/upstream-issues/: hal_espressif-libnet80211-wifi-thread-panic.md  zephyr-wdt_esp32-missing-tick-conversion.md
samples/: pigeon_module.cmake  west-vanilla.yml  west.yml
samples/asset_tracker/: CMakeLists.txt  Kconfig  prj.conf
samples/asset_tracker/boards/: circuitdojo_feather_nrf9151_ns.conf  circuitdojo_feather_nrf9151_ns.overlay
samples/asset_tracker/src/: gnss.c  gnss.h  main.c  shadow.c  shadow.h
samples/boards/circuitdojo/feather_nrf9151/: CMakeLists.txt  Kconfig  Kconfig.circuitdojo_feather_nrf9151  Kconfig.defconfig  Kconfig.sysbuild  README.md  board.cmake  board.yml  circuitdojo_feather_nrf9151.dts  circuitdojo_feather_nrf9151_2.overlay  circuitdojo_feather_nrf9151_common-pinctrl.dtsi  circuitdojo_feather_nrf9151_common.dtsi  circuitdojo_feather_nrf9151_ns.dts  circuitdojo_feather_nrf9151_ns_2.overlay  circuitdojo_feather_nrf9151_ns_defconfig  circuitdojo_feather_nrf9151_partition_conf.dtsi
samples/coap_init/: CMakeLists.txt
samples/coap_init/src/: main.c
samples/coap_tcp_init/: CMakeLists.txt  Kconfig  prj.conf
samples/coap_tcp_init/boards/: circuitdojo_feather_nrf9160_ns.conf
samples/coap_tcp_init/src/: main.c  shadow.c  shadow.h
samples/coap_tcp_init/src/net/: connection_manager.c  connection_manager.h
samples/https_init/: CMakeLists.txt  prj.conf
samples/https_init/boards/: circuitdojo_feather_nrf9151_ns.conf  circuitdojo_feather_nrf9151_ns.overlay  circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160_ns.overlay
samples/https_init/cert/: GTS_Root_R4.crt
samples/https_init/src/: main.c  shadow.c
samples/https_init/src/net/: connection_manager.c
samples/https_init/sysbuild/mcuboot/: prj.conf
samples/https_init/sysbuild/mcuboot/boards/: circuitdojo_feather_nrf9151.conf  circuitdojo_feather_nrf9151.overlay  circuitdojo_feather_nrf9160.conf  circuitdojo_feather_nrf9160.overlay
samples/shadow_model/: CMakeLists.txt  prj.conf
samples/shadow_model/src/: main.c
samples/wifi_init/: CMakeLists.txt  prj.conf  sysbuild.conf
samples/wifi_init/src/: main.c  shadow.c  shadow.h
samples/wifi_init/src/net/: wifi_connection_manager.c  wifi_connection_manager.h
samples/ws_init/: CMakeLists.txt  prj.conf  sysbuild.conf
samples/ws_init/src/: heap_monitor.c  heap_monitor.h  main.c
samples/ws_init/src/net/: wifi_connection_manager.c  wifi_connection_manager.h
